change titles on index
Co-authored-by: David Sterry <sterry.david@gmail.com>

--- a/JobForum/Views/Items/CreateForm.cshtml
+++ b/JobForum/Views/Items/CreateForm.cshtml
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Hello Friend!</title>
+  <title>Create your job posting</title>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
 </head>
 
