--- a/JobForum/Views/Items/Index.cshtml
+++ b/JobForum/Views/Items/Index.cshtml
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello Friend!</title>
+    <title>Current Jobs</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
 </head>
 <body>
