add click functionality to job postings
Co-authored-by: Jerrod Styrk <jstyrk@citadel.edu>

--- a/JobForum/Views/Home/Index.cshtml
+++ b/JobForum/Views/Home/Index.cshtml
@@ -1,3 +1,5 @@
 <h1> Welcome to the Job Forum<h1>
-<a href= '/jobs/new'>Post a new job</a>
-<a href= '/jobs'>See a list of current Jobs</a>
+    <a href='/jobs/new'>Post a new job</a><br>
+    <a href='/jobs'>See a list of current Jobs</a>
+
+    
