--- a/JobForum/Views/Items/New.cshtml
+++ b/JobForum/Views/Items/New.cshtml
@@ -10,11 +10,11 @@
   <div class="container">
     <form action="/jobs" method="post">
       <label for="title">Add a Job Title</label>
-      <input id="title" name="title" type="text">
+      <input id="title" name="title" type="text"><br>
       <label for="description">Add a description</label>
-      <input id="description" name="description" type="text">
+      <input id="description" name="description" type="text"><br>
       <label for="contact">Add your contact info</label>
-      <input id="contact" name="contact" type="text">
+      <input id="contact" name="contact" type="text"><br>
       <button type="submit">Submit</button>
     </form>
   </div>
